--- a/otherstadiums.html
+++ b/otherstadiums.html
@@ -202,7 +202,7 @@
 			
 			<div>
 				<h1>Other Sports</h1>
-				<p>Stadiums that I have been to within the UK that aren't part of the EFL.</p>
+				<p>Stadiums that I have been to within the UK that aren't part of the EFL or EPL.</p>
 				<br>
 			</div>
 			
