--- a/otherstadiums.html
+++ b/otherstadiums.html
@@ -282,7 +282,7 @@ and change badge opacity to 100%
 			
 			<div>
 				<h1>Old Stadiums</h1>
-				<p>Stadiums that I have been as part of the 92, but have since moved to another ground.</p>
+				<p>Stadiums that I have been to as part of the 92, but have since moved to another ground.</p>
 				<br>
 			</div>
 			
@@ -309,7 +309,7 @@ and change badge opacity to 100%
 			
 			<div>
 				<h1>International Stadiums</h1>
-				<p>Stadiums that I have visited abroad that I have watched a game at.</p>
+				<p>Stadiums that I have visited whilst abroad that I have seen a game at.</p>
 				<br>
 		  </div>
 			
