--- a/otherstadiums.html
+++ b/otherstadiums.html
@@ -367,7 +367,12 @@ and change badge opacity to 100%
 		
 <!-- New York Mets		 	-->
 		<div class="image-container">
-  		<img class="thumbnail-image" style=" opacity:100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/NewYorkMets.png" alt="#" >
+  		<img class="thumbnail-image" style=" opacity:100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/NewYorkMets.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/NewYorkMets.png')">>
+		</div>
+
+<!-- MK Lightning		 	-->
+		<div class="image-container">
+  		<img class="thumbnail-image" style=" opacity:100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/MKLightning.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/MKLightning.png')">>
 		</div>
 
 		
