--- a/champ25-26.html
+++ b/champ25-26.html
@@ -176,6 +176,9 @@
 			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Norwich2.png" alt="Norwich City" width="333px">
 				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Norwich City 0-1 Watford<br>Carrow Road<br>Championship</p>
 			</div>
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="Norwich City" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Blackburn Rovers 0-0 Watford<br>Ewood Park<br>Championship</p>
+			</div>
 			
 		</div>
 		
