--- a/the92.html
+++ b/the92.html
@@ -202,7 +202,7 @@
 				<h1>The 92 Club</h1>
 			  <p>This is my progress on completing the 92.<br><span </span></p>
 			  <p style="opacity: 40%; font-size: 10pt;">Click on each one to see the game and a photo from each!</p>
-				<p>[64/92]</p>
+				<p>[65/92]</p>
 			  <br>
 			</div>
 			
@@ -277,7 +277,7 @@ and change badge opacity to 100%
 		</div>
 <!-- BRIGHTON				-->
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 10%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Brighton.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Brighton.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Brighton.png')">
 		</div>
 <!-- BRISTOL CITY 			-->
 		<div class="image-container">
@@ -650,6 +650,7 @@ and change badge opacity to 100%
 <!--		<div class="image-container">
   		<img class="thumbnail-image" style="opacity: 10%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Morecambe.png" alt="#" >
 		</div> -->
+
 
 
 
