--- a/champ25-26.html
+++ b/champ25-26.html
@@ -182,6 +182,21 @@
 			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="Southampton" width="333px">
 				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Southampton 0-0 Watford<br>Saint Mary's<br>Championship</p>
 			</div>
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="Stoke City" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Stoke 0-0 Watford<br>Bet365 Stadium<br>Championship</p>
+			</div>
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="QPR" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">QPR 0-0 Watford<br>Loftus Road<br>Championship</p>
+			</div>
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="Oxford" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Oxford United 0-0 Watford<br>Kassam Stadium<br>Championship</p>
+			</div>
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="West Brom" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">West Brom 0-0 Watford<br>The Hawthorns<br>Championship</p>
+			</div>
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="Middlesbrough" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Middlesbrough 0-0 Watford<br>Riverside Stadium<br>Championship</p>
+			</div>
 			
 		</div>
 		
