--- a/sportsgraphics.html
+++ b/sportsgraphics.html
@@ -139,17 +139,15 @@
 		
 		<!-- Image Grid -->
 		<div class="image-grid">
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-SOUWAT.png" alt="Southampton vs Watford" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-MilanRoma.png" alt="Roma vs Milan" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Luca-1.png" alt="Luca Kjerrumgaard" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-WatfordChakJez.png" alt="Watford FC" onclick="openModal(this.src)">
-			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-McIlroy-4.png" alt="Rory McIlroy" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-WATPRE.png" alt="Watford vs Preston North End" onclick="openModal(this.src)">
-			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Newcastle.png" alt="Newcastle United" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-DERWAT.png" alt="Watford vs Derby" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Maamma.png" alt="Othmane Maamma" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-WATIPS.png" alt="Watford vs Ipswich" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Baah2.png" alt="Kwadwo Baah Match Day" onclick="openModal(this.src)">
-			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Jaguars.png" alt="Jacksonville Jaguars" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Louza-3.png" alt="Imran Louza" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Coventry-1.png" alt="Coventry City" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Dortmund-1.png" alt="Borussia Dortmund" onclick="openModal(this.src)">
