--- a/sportsgraphics.html
+++ b/sportsgraphics.html
@@ -139,6 +139,7 @@
 		
 		<!-- Image Grid -->
 		<div class="image-grid">
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Vlasic.png" alt="Nikola Vlasic" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Semenyo.png" alt="Antoine Semenyo" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-EltonJohnKit.png" alt="Elton John Third Kit" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-HertsHighway.png" alt="Hertfordshire Highwaymen" onclick="openModal(this.src)">
