--- a/index.html
+++ b/index.html
@@ -101,17 +101,23 @@
         <div class="menu-item" onclick="toggleDropdown('dropdown1')">projects</div>
         <div id="dropdown1" class="dropdown">
             
+            <div><p>singluar graphics</p></div>
             <div><a href="/posters">posters</a></div>
-            <div><a href="/coverart">cover art</a></div>
             <div><a href="/sportsgraphics">sports graphics</a></div>
-            <div><a href="/oneminutebriefs">one minute briefs</a></div>
+            <br>
+            <div> <p>work</p></div>
+            <div><a href="/47xSportsTeams">47 brand x football clubs</a></div>
+            <br>
+            <div> <p>personal projects</p></div>
             <div><a href="/thetoastclub">toast club</a></div>
             <div><a href="/orbitproperty">orbit property</a></div>
             <div><a href="/sportcheck">sport check</a></div>
             <div><a href="/watfordfc">watford fc</a></div>
-            <div><a href="/afcstaustell">afc st. austell</a></div>
             <div><a href="/northwoodfc">northwood fc</a></div>
-            <div><a href="/Gumball3000">gumball 3000</a></div>
+            <br>
+            <div> <p>extras</p></div>
+            <div><a href="/oneminutebriefs">one minute briefs</a></div>
+            <div><a href="/coverart">cover art</a></div>
         
         </div>
 
