--- a/index.html
+++ b/index.html
@@ -106,22 +106,19 @@ body {
     color: dimgrey;
     transition: color 0.2s;
     text-decoration: none;
-	margin-left: 30px;
-	margin-right: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
-	
-	a2 {
-		text-decoration: none;
-		font-size: 12pt;
-		
-	}
+
+a2 {
+    text-decoration: none;
+    font-size: 12pt;
+}
 
 .menu-bar-vertical span:hover,
 .menu-bar-vertical a:hover {
     color: #000000;
 }
-
-
 
 /* ===== Overlay ===== */
 .overlay {
@@ -140,7 +137,6 @@ body {
     display: flex;
 }
 
-/* Feathered Menu Box */
 .overlay-content {
     --overlay-opacity: 0.5;
     background: rgba(255, 255, 255, var(--overlay-opacity));
@@ -150,8 +146,6 @@ body {
     flex-direction: column;
     gap: 4px;
     text-align: center;
-
-
 }
 
 .overlay-content a {
@@ -166,31 +160,43 @@ body {
     color: #555;
 }
 
-@media screen and (max-width: 768px) {
+/* ===== MOBILE ===== */
+@media screen and (max-width: 770px) {
+
+    /* Remove only background SVG */
     #background-image {
         display: none;
+    }
+
+    body {
+        height: auto;
+        overflow-x: hidden;
+    }
+
+    /* Stack menu vertically */
+    .menu-bar-vertical {
+        flex-direction: column;
+        align-items: center;
+        gap: 16px;
+        margin-top: 25px;
     }
 
     .menu-bar-vertical span,
     .menu-bar-vertical a {
         font-size: 18px;
+        margin-left: 0;
+        margin-right: 0;
     }
-	
-	.overlay-content a {
-    color: black;
-    font-size: 15px;
-    font-weight: 100;
-    text-decoration: none;
-    transition: color 0.2s;
+
+    .overlay-content a {
+        font-size: 15px;
+    }
+
+    a2 {
+        font-size: 15pt;
+    }
 }
-	a2 {
-		text-decoration: none;
-		font-size: 15pt;
-		
-	}
-	}
-	
-	
+
 </style>
 </head>
 
@@ -219,22 +225,21 @@ body {
 
 <div class="overlay" id="menu-projects">
     <div class="overlay-content">
-		<a2>WORK</a2>
-		<a href="/47xSportsTeams">47 x football clubs</a>
-		<br>
-		<a2>PERSONAL PROJECTS</a2>
-		<a href="/thetoastclub">the toast club</a>
-		<a href="/orbitproperty">orbit property</a>
-		<a href="/sportcheck">sport check</a>
-		<a href="/watfordfc">watford fc</a>
-		<a href="/northwoodfc">northwood fc</a>
-		<br>
-		<a2>EXTRAS</a2>
-		<a href="/sportsgraphics">sports graphics</a>
-		<a href="/posters">posters</a>
-		<a href="/oneminutebriefs">one minute briefs</a>
-		<a href="/coverart">cover art</a>
-		
+        <a2>WORK</a2>
+        <a href="/47xSportsTeams">47 x football clubs</a>
+        <br>
+        <a2>PERSONAL PROJECTS</a2>
+        <a href="/thetoastclub">the toast club</a>
+        <a href="/orbitproperty">orbit property</a>
+        <a href="/sportcheck">sport check</a>
+        <a href="/watfordfc">watford fc</a>
+        <a href="/northwoodfc">northwood fc</a>
+        <br>
+        <a2>EXTRAS</a2>
+        <a href="/sportsgraphics">sports graphics</a>
+        <a href="/posters">posters</a>
+        <a href="/oneminutebriefs">one minute briefs</a>
+        <a href="/coverart">cover art</a>
     </div>
 </div>
 
@@ -248,17 +253,16 @@ body {
 
 <div class="overlay" id="menu-extras">
     <div class="overlay-content">
-		
         <a2>STADIUMS</a2>
-		<a href="/the92">the ninety-two</a>
+        <a href="/the92">the ninety-two</a>
         <a href="/otherstadiums">other stadiums</a>
-		<br>
-		<a2>WATFORD AWAY DAYS</a2>
-		<a href="/prem21-22">premier league 2021/22</a>
-		<a href="/champ22-23">championship 2022/23</a>
-		<a href="/champ23-24">championship 2023/24</a>
-		<a href="/champ24-25">championship 2024/25</a>
-		<a href="/champ25-26">championship 2025/26</a>
+        <br>
+        <a2>WATFORD AWAY DAYS</a2>
+        <a href="/prem21-22">premier league 2021/22</a>
+        <a href="/champ22-23">championship 2022/23</a>
+        <a href="/champ23-24">championship 2023/24</a>
+        <a href="/champ24-25">championship 2024/25</a>
+        <a href="/champ25-26">championship 2025/26</a>
     </div>
 </div>
 
