--- a/47xSportsTeams.html
+++ b/47xSportsTeams.html
@@ -14,44 +14,30 @@
   html,body{
     margin:0;
     padding:0;
-    height:100%;
     font-family:'Poppins',sans-serif;
-    touch-action:pan-y;
-    overflow:hidden; /* Desktop default */
+    overflow-x:hidden; /* prevent horizontal scroll */
+    scroll-behavior: smooth;
   }
 
   .frame{
-    position:fixed;
-    inset:0;
     display:flex;
     flex-direction:column;
-    height:100%;
   }
 
   /* ---------------------- CAROUSEL ---------------------- */
   .carousel{
     position:relative;
-    flex:0 0 68vh;
-    background:#00ff33;
+    width:100%;
     overflow:hidden;
-  }
-
-  .carousel-track{
-    position:absolute;
-    inset:0;
     display:flex;
-    touch-action:none;
+    justify-content:center;
+    align-items:center;
   }
 
-  .carousel-track picture{
-    width:100%;
-    height:100%;
-    flex-shrink:0;
-  }
-
+  .carousel-track picture,
   .carousel-track img{
-    width:100%;
-    height:100%;
+    width:100%;      /* desktop: fit page width */
+    height:auto;     /* maintain aspect ratio */
     object-fit:cover;
     display:block;
   }
@@ -62,80 +48,63 @@
     width:100%;
   }
 
+  /* ---------------------- BOTTOM CONTENT ---------------------- */
   .bottom{
-    flex:1;
     background:#fff;
     position:relative;
-    padding-bottom:100px;
+    padding:40px 20px 100px 20px;
   }
 
   .back{
     position:absolute;
-    left:40px;
-    top:32px;
+    left:20px;
+    top:20px;
     font-size:14px;
     font-weight:400;
   }
 
   .content{
-    margin-left:170px;
-    margin-top:18px;
+    margin-top:20px;
     max-width:720px;
   }
 
   .title{
-    font-size:46px;
+    font-size:34px;
     margin:0 0 10px 0;
     font-weight:600;
   }
 
   .copy{
-    font-size:14px;
-    line-height:1.55;
-    max-width:450px;
+    font-size:16px;
+    line-height:1.6;
+    max-width:600px;
     font-weight:300;
   }
 
-  /* ------ MOBILE FULLSCREEN MODE ------ */
+  /* ------ MOBILE ADJUSTMENTS ------ */
   @media (max-width:700px){
 
-    html,body{
-      overflow:auto;
-      height:auto;
-    }
-
-    .frame{
-      position:relative;
-      height:auto;
-      overflow:visible; /* allow scrolling */
-    }
-
     .carousel{
-      height:auto;
-      flex:0 0 auto;
+      height:100vh; /* full height viewport */
     }
 
-    .carousel-track{
-      position:relative; /* remove absolute to allow carousel height */
+    .carousel-track picture,
+    .carousel-track img{
+      height:100vh;   /* fill screen height */
+      width:auto;     /* keep aspect ratio, allow horizontal overflow */
     }
 
     .content{
-      margin-left:20px;
-      margin-right:20px;
       margin-top:20px;
+      margin-left:0;
+      margin-right:0;
     }
 
     .title{
-      font-size:34px;
+      font-size:28px;
     }
 
     .copy{
-      font-size:14px;
-    }
-
-    .back{
-      left:20px;
-      top:18px;
       font-size:14px;
     }
   }
@@ -148,17 +117,12 @@
 
   <!-- -------------------- IMAGE -------------------- -->
   <div class="carousel">
-
     <div class="carousel-track">
-
-      <!-- Slide 1 (unchanged) -->
       <picture>
         <source media="(max-width: 700px)" srcset="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/47/Cap+Artworking/47Caps.gif">
         <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/47/Cap+Artworking/47Caps.gif" alt="Slide 1">
       </picture>
-
     </div>
-
   </div> 
 
   <div class="divider"></div>
