--- a/47xSportsTeams.html
+++ b/47xSportsTeams.html
@@ -134,7 +134,7 @@
     <div class="content">
       <h1 class="title">'47 Brand x Sports Clubs</h1>
       <p class="copy">
-      During my time at '47 Brand, between November 2023 &amp; February 2026, I have been responsible for artworking caps and communicating with factories about the production of caps for clients such as Arsenal FC, BSC Young Boys, Ipswich FC, Nottingham Forest FC, along with numerous other sports teams.</p>
+      During my time at '47 Brand, from November 2023 to February 2026, I was responsible for artworking caps for a variety of clients, including prominent sports teams such as Arsenal FC, BSC Young Boys, Ipswich Town, and Nottingham Forest. My role involved ensuring that all designs met client specifications and seasonal collection requirements, maintaining high standards of quality and detail. <br><br>In addition to artworking, I liaised directly with factories to coordinate production processes, ensuring smooth communication and timely delivery of products. This experience allowed me to develop strong project management skills, problem-solving abilities, and a clear understanding of the full production workflow from design through to final manufacturing.</p>
     </div>
   </div>
 
