--- a/47xSportsTeams.html
+++ b/47xSportsTeams.html
@@ -3,7 +3,11 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Carousel Page</title>
+<title>47 x Football Clubs</title>
+	
+<!-- favicon (same as on https://www.mikeychapman.com/thetoastclub) -->
+<link rel="icon" href="https://www.mikeychapman.com/favicon.ico" type="image/x-icon" />
+
 
 <!-- POPPINS FONT -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -134,7 +138,9 @@
     <div class="content">
       <h1 class="title">'47 Brand x Sports Clubs</h1>
       <p class="copy">
-      During my time at '47 Brand, from November 2023 to February 2026, I was responsible for artworking caps for a variety of clients, including prominent sports teams such as Arsenal FC, BSC Young Boys, Ipswich Town, and Nottingham Forest. My role involved ensuring that all designs met client specifications and seasonal collection requirements, maintaining high standards of quality and detail. <br><br>In addition to artworking, I liaised directly with factories to coordinate production processes, ensuring smooth communication and timely delivery of products. This experience allowed me to develop strong project management skills, problem-solving abilities, and a clear understanding of the full production workflow from design through to final manufacturing.</p>
+      During my time at '47 Brand, from November 2023 to February 2026, I was responsible for artworking caps for a variety of clients, including prominent sports teams such as Arsenal FC, BSC Young Boys, Ipswich Town, and Nottingham Forest. My role involved ensuring that all designs met client specifications and seasonal collection requirements, maintaining high standards of quality and detail.<br><br>
+      In addition to artworking, I liaised directly with factories to coordinate production processes, ensuring smooth communication and timely delivery of products. This experience allowed me to develop strong project management skills, problem-solving abilities, and a clear understanding of the full production workflow from design through to final manufacturing.
+      </p>
     </div>
   </div>
 
