--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>mikeychapman_!</title>
 
+<!-- favicon (same as on https://www.mikeychapman.com/thetoastclub) -->
+<link rel="icon" href="https://www.mikeychapman.com/favicon.ico" type="image/x-icon" />
+
+
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
