--- a/47xSportsTeams.html
+++ b/47xSportsTeams.html
@@ -4,9 +4,8 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>47 x Football Clubs</title>
-	
-<!-- favicon (same as on https://www.mikeychapman.com/thetoastclub) -->
-<link rel="icon" href="https://www.mikeychapman.com/favicon.ico" type="image/x-icon" />
+
+<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 
 
 <!-- POPPINS FONT -->
