--- a/coverart.html
+++ b/coverart.html
@@ -139,7 +139,8 @@
 		
 		<!-- Image Grid -->
 		<div class="image-grid">
-
+			
+			<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/coverart/Scorpion-CA.png" alt="" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/coverart/JogaBonito-CA.png" alt="" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/coverart/WelcomeToDetroit-CA.png" alt="" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/coverart/Underworld-CA.png" alt="" onclick="openModal(this.src)">
