--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ a2 {
     <div class="overlay-content">
         <a href="https://x.com/MikeyJC_" target="_blank">twitter</a>
         <a href="https://www.instagram.com/mikeyjc_/" target="_blank">instagram</a>
-        <a href="https://www.linkedin.com/in/mikey-chapman-9aa2b5394/" target="_blank">linkedin</a>
+        <a href="https://www.linkedin.com/in/mikeyjc/" target="_blank">linkedin</a>
     </div>
 </div>
 
